--- a/.github/workflows/status_update.yml
+++ b/.github/workflows/status_update.yml
@@ -7,7 +7,7 @@ on:
     branches: [ main ]
   schedule:
     - cron: '*/5 * * * *'
-
+jobs:
   status_update:
     name: "status_update"
     runs-on: ubuntu-latest
